# ocean

./: .gitignore  Cargo.toml  Makefile.toml  shell.nix
assets/: barquica.glb  cononut_turtle.gltf  correolas.glb  flota1.glb  hex.glb  lancha.glb  palmera.glb  palmera2.glb  palmera3.glb  plano.glb  raft.glb
assets/fonts/3270/: 3270-Regular.afm  3270-Regular.pfm  3270Condensed-Regular.afm  3270Condensed-Regular.pfm  3270SemiCondensed-Regular.afm  3270SemiCondensed-Regular.g2n  3270SemiCondensed-Regular.pfm
assets/shaders/: atmosphere.frag  atmosphere.vert  sky.frag  sky.vert  sky.wgsl  sky_day.frag  sky_day.vert  sky_sphere.wgsl  water.frag  water.vert  water.wgsl  water_webgl.frag  water_webgl.vert
assets/sources/: boat.blend  correolas.blend  lancha.blend  raft.blend
src/: atmosphere.rs  boat.rs  camera.rs  input.rs  main.rs  sky.rs  stripe.rs  ui.rs  water.rs
src/sky/: atmosphere.rs  material.rs  mesh.rs  mod.rs  sphere_material.rs  star_material.rs
src/water/: material.rs  mod.rs  plugin.rs
