[package]
name = "ocean"
version = "0.1.0"
authors = ["Benjamin Große <benjamin@midokura.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package."*"]
# opt-level = 3

# [features]
# default = [
  # "bevy/bevy_gltf",
  # "bevy/bevy_winit",
  # "bevy/render",
  # "bevy/png",
# ]
#
# native = [
  # "bevy/bevy_wgpu",
# ]
#
# web = [
  # "bevy_webgl2"
# ]

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy-inspector-egui = "0.6.1"
bevy_egui = "0.8"
# bevy = { version = "0.5.0", git = "https://github.com/bevyengine/bevy", rev = "1d0d8a3397bd6fc2c14d42ffd0668d2443748912", featues = ["dynamic" ] }
# bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui/", rev = "64d1c79af75db6f41da46c8f1c05f4eaa487fb43" }
# bevy_egui = { git = "https://github.com/jakobhellermann/bevy_egui.git", rev = "636ee31277f82873f490d2daf99ab64a66a10710" }

bevy_sprite = "0.5.0"

rand = "0.7"
lazy-static-include = "3.1.1"
# bevy_prototype_particles = { git = "https://github.com/james7132/bevy_prototype_particles", rev="3d57df69984fc64a5681617957bd2106cb64a2eb" }
# bevy = {version="0.4.0", default-features=false}
# bevy_webgl2 = {version="0.4.0", optional=true}

# winit = {version = "0.24.0"}
# getrandom = {version="0.1", features=["wasm-bindgen"]}
# bevy_pixel_camera = "0.1.1"
