[package]
name = "ocean"
version = "0.1.0"
authors = ["Benjamin Große <benjamin@midokura.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
wgpu-types = { version = "0.13.2" } #, features = ["spirv"] }
bevy_egui = "0.15"
# bevy-inspector-egui = "0.6.1"

rand = "0.7"
lazy-static-include = "3.1.1"
bytemuck = "1.7.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

